# azubot

./: .env.example  .gitignore  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: main.py  pyproject.toml
apps/bot/: pyproject.toml
apps/web/: package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: main.tsx
docker/: compose.yaml
scripts/: dev.mjs
